@@ -6,6 +6,7 @@ v3.0.5 - in progress
 	* Added address validation
 	* Added man page documentation
 	* Added xbee_conPurge()
+	* Added pseudo terminal application
 
 v3.0.4 - 29 Feb 2012
 	* Implemented rx/tx counters
